# GoL-rust

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
config/: config.10-cell-infinite-grow.toml  config.gliders.toml  config.toml  rle_to_config.py
src/: application.rs  domain.rs  main.rs  presentation.rs
src/io/: config.rs
