[package]
name = "GoL-Rust"
version = "0.1.0"
authors = ["Arnau Orriols <dev@arnauorriols.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi-escapes = "0.1.0"
ansi_term = "0.12"
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
ctrlc = "3.1.3"

[[bin]]
name = "gol-rust"
path = "src/main.rs"
